src/test/ui/feature-gate-generic_param_attrs.stderr
error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:22:13
   |
22 | struct StLt<#[rustc_lt_struct] 'a>(&'a u32);
   |             ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:24:13
   |
24 | struct StTy<#[rustc_ty_struct] I>(I);
   |             ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:27:11
   |
27 | enum EnLt<#[rustc_lt_enum] 'b> { A(&'b u32), B }
   |           ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:29:11
   |
29 | enum EnTy<#[rustc_ty_enum] J> { A(J), B }
   |           ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:32:12
   |
32 | trait TrLt<#[rustc_lt_trait] 'c> { fn foo(&self, _: &'c [u32]) -> &'c u32; }
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:34:12
   |
34 | trait TrTy<#[rustc_ty_trait] K> { fn foo(&self, _: K); }
   |            ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:37:11
   |
37 | type TyLt<#[rustc_lt_type] 'd> = &'d u32;
   |           ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:39:11
   |
39 | type TyTy<#[rustc_ty_type] L> = (L, );
   |           ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:42:6
   |
42 | impl<#[rustc_lt_inherent] 'e> StLt<'e> { }
   |      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:44:6
   |
44 | impl<#[rustc_ty_inherent] M> StTy<M> { }
   |      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:47:6
   |
47 | impl<#[rustc_lt_impl_for] 'f> TrLt<'f> for StLt<'f> {
   |      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:51:6
   |
51 | impl<#[rustc_ty_impl_for] N> TrTy<N> for StTy<N> {
   |      ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:56:9
   |
56 | fn f_lt<#[rustc_lt_fn] 'g>(_: &'g [u32]) -> &'g u32 { loop { } }
   |         ^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:58:9
   |
58 | fn f_ty<#[rustc_ty_fn] O>(_: O) { }
   |         ^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:62:13
   |
62 |     fn m_lt<#[rustc_lt_meth] 'h>(_: &'h [u32]) -> &'h u32 { loop { } }
   |             ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on type parameter bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:64:13
   |
64 |     fn m_ty<#[rustc_ty_meth] P>(_: P) { }
   |             ^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error[E0658]: attributes on lifetime bindings are experimental (see issue #34761)
  --> $DIR/feature-gate-generic_param_attrs.rs:69:19
   |
69 |     where Q: for <#[rustc_lt_hof] 'i> Fn(&'i [u32]) -> &'i u32
   |                   ^^^^^^^^^^^^^^^
   |
   = help: add #![feature(generic_param_attrs)] to the crate attributes to enable

error: aborting due to 17 previous errors

